# mdb-test-auto

./: .gitignore  README.md  pyproject.toml  run_server.sh  server.py  update_pi_directory.ps1  update_pi_directory.sh
.github/workflows/: build.yml
mdb_test_auto/: pyproject.toml
mdb_test_auto/src/mdb/: CoinTypesToDespense.py  __init__.py  serialcomm.py
src/api/: api.py  schema.py  utils.py
src/mdb/: CoinsDepositedResponse.py  CoinsDispensedResponse.py  MDBSetupResponse.py  SlugResponse.py  StatusResponse.py  VMCPollResponseParser.py  mdb.py
src/mdb_test_auto/: api.py  main.py  utils.py
src/server/: server.py
src/user_interface/static/css/: app.css
src/user_interface/static/js/: scripts.js
src/user_interface/tailwindcss/: package.json  tailwind.config.js
src/user_interface/tailwindcss/styles/: app.css
src/user_interface/templates/: base.html  home.html  index.html
src/user_interface/templates/components/: alert.html  input_table.html  output_table.html  result_page.html
user_interface/static/css/: styles.css
user_interface/static/js/: scripts.js
user_interface/templates/: index.html
